# taskDistributor

./: CMakeLists.txt  README.md  input.txt  main.cpp  matricies.txt
src/future/: Package.h
src/libs/: ProcessContainer.h
src/model/: CalculateTask.cpp  CalculateTask.h  Cluster.cpp  Cluster.h  GroupInfo.cpp  GroupInfo.h  ManagerTask.cpp  ManagerTask.h  Matrix.cpp  Matrix.h  MatrixBuilder.cpp  MatrixBuilder.h  MatrixTask.cpp  MatrixTask.h
src/utils/: ClasterMeasurementUtil.cpp  ClasterMeasurementUtil.h  ClusterMeasurementUtil.cpp  ClusterMeasurementUtil.h  Colormod.h  Format.h  Log.hpp  MatrixUtils.cpp  MatrixUtils.h  PrettyPrint.cpp  PrettyPrint.h
